--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gallery | Hanuman</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -132,3 +132,4 @@
 
 </body>
 </html>
+
